--- a/gulp/package.json
+++ b/gulp/package.json
@@ -19,6 +19,7 @@
     "gulp-typescript": "4.0.2",
     "gulp-uglify": "3.0.0",
     "gulp-uglifycss": "^1.1.0",
+    "node-sass": "^7.0.0",
     "typescript": "2.8.3"
   }
 }
